buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
	}

	dependencies {
		classpath 'org.postgresql:postgresql:42.7.7'
	}
}

plugins {
	id 'idea'
	id 'jacoco'
	id 'org.sonarqube' version '6.2.0.5505'
	id 'org.owasp.dependencycheck' version '12.1.3'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.openrewrite.rewrite' version '7.23.0'
}


rewrite {
	activeRecipe("de.signaliduna.elpa.UpgradeToSpringBoot4")
	setExportDatatables(true)
	configFile = file("open-rewrite/rewrite.yml")
}


dependencies {
	rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:3.23.0"))
	rewrite("org.openrewrite.recipe:rewrite-spring")
	rewrite("org.openrewrite.recipe:rewrite-jackson")
	rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
}

ext {
	set('springCloudVersion', "2025.1.1")
	set('micrometerTracingVersion', "1.5.3")
	set('jacksonVersion', "2.19.1")
	set('cloudeventsVersion', "4.0.1")
}

allprojects {
	group = 'de.signaliduna.elpa.dlt-manager'

	repositories {
		mavenLocal()
		mavenCentral()
	}
}

LinkedHashSet jacocoSet = new LinkedHashSet()

subprojects {
	apply plugin: 'java'
	apply plugin: 'idea'
	apply plugin: 'jacoco'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'org.sonarqube'
	apply plugin: 'org.owasp.dependencycheck'

	java {
		withSourcesJar()
		sourceCompatibility = JavaVersion.VERSION_21
	}

	test {
		useJUnitPlatform()
	}

	jacoco {
		toolVersion = "0.8.13"
		reportsDirectory = layout.buildDirectory.dir("jacoco")
	}

	jacocoTestReport {
		dependsOn test
		getExecutionData().setFrom(fileTree(layout.buildDirectory).include("/jacoco/*.exec"))
		reports {
			xml.required = true
			csv.required = false
			html.required = false
		}
	}

	jacocoTestCoverageVerification {
		dependsOn jacocoTestReport
		violationRules {
			rule {
				enabled = true
				element = 'CLASS'
				excludes = ['de.signaliduna.elpa.dltmanager.adapter.message.errorhandler.model.*', 'de.signaliduna.dltmanager.adapter.db.model.*']
				limit {
					counter = 'BRANCH'
					value = 'COVEREDRATIO'
					minimum = 1.0
				}
			}
		}
	}

	jacocoSet.addAll(
		tasks.findAll({ it.name.contains('jacocoTestReport') || it.name == 'test' })
	)

	tasks.named('test') {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
		jvmArgs("-XX:+EnableDynamicAgentLoading")
	}

	check.dependsOn jacocoTestCoverageVerification
	dependencyCheck {
		skip = true  // disabled for local development (requires internal SI infrastructure)
	}
}

rootProject.tasks.sonarqube.dependsOn = jacocoSet

sonarqube {
	properties {
		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.coverage.exclusions", "**/model/*.*"
		property "sonar.cpd.exclusions", "**/model/*.*, **/mongo-init/*.js"
	}
}

tasks.register('printVersion') {
	println(version)
}

final String SNAPSHOT_SUFFIX = "-SNAPSHOT"
final String GRADLE_PROPERTIES_FILE_NAME = "gradle.properties"

tasks.register('removeSnapshot', WriteProperties) {
	destinationFile = file(GRADLE_PROPERTIES_FILE_NAME)
	def newVersion = version.replace(SNAPSHOT_SUFFIX, "")
	println('new version: ' + newVersion)
	property('version', newVersion)
}

tasks.register('increasePatchVersion', WriteProperties) {
	destinationFile = file(GRADLE_PROPERTIES_FILE_NAME)
	println('old version: ' + version)
	def versionStr = version as String
	boolean isSnapshot = versionStr.endsWith(SNAPSHOT_SUFFIX)
	def versionNo = (isSnapshot) ? versionStr.replace(SNAPSHOT_SUFFIX, "") : versionStr
	def splitVersion = versionNo.split("\\.")
	def patchVersion = Integer.valueOf(splitVersion[2]).intValue() + 1
	def newVersion = String.format('%s.%s.%d', splitVersion[0], splitVersion[1], patchVersion) + ((isSnapshot) ? SNAPSHOT_SUFFIX : "")
	println('new version: ' + newVersion)
	property('version', newVersion)
}

tasks.register('addSnapshot', WriteProperties) {
	destinationFile = file(GRADLE_PROPERTIES_FILE_NAME)
	def newVersion = version + SNAPSHOT_SUFFIX
	println('new version: ' + newVersion)
	property('version', newVersion)
}
